tests/specs/ecosystem/zeppet/core/2_1_3.test
zeppet/core/2.1.3
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export const compose = <T extends HTMLElement>(...actions: Action<T>[]): Action<T> => {
                                  ~~~~~~~~~~~
    at file://<tmpdir>/src/core/actions/compose.ts:25:35

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export const use = <T extends HTMLElement>(element: T, ...actions: Action<T>[]): T => {
                              ~~~~~~~~~~~
    at file://<tmpdir>/src/core/actions/use.ts:14:31

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export const select = (selector: string): Array<HTMLElement> => {
                                                ~~~~~~~~~~~
    at file://<tmpdir>/src/core/select/select.ts:8:49

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export const selectOne = <T extends HTMLElement>(selector: string): T | undefined => {
                                    ~~~~~~~~~~~
    at file://<tmpdir>/src/core/select/select.ts:11:37

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export type Action<T extends HTMLElement> = (element: T) => T;
                             ~~~~~~~~~~~
    at file://<tmpdir>/src/types/action.types.ts:1:30

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export type ActionFn = <T extends HTMLElement>(element: T) => T;
                                  ~~~~~~~~~~~
    at file://<tmpdir>/src/types/action.types.ts:2:35

Found 6 errors.

error: Type checking failed.

